--- a/mouseFocus/mouseFocus/MainWindow.xaml
+++ b/mouseFocus/mouseFocus/MainWindow.xaml
@@ -7,11 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Border Width="300" Height="100"  BorderBrush="LightSkyBlue" BorderThickness="5">
-            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="TextBlock" TextWrapping="Wrap"  Height="83" Width="288" FontSize="50" Focusable="True" 
+        <Border Width="300" Height="100"  BorderBrush="LightSkyBlue" BorderThickness="5"
+                       Focusable="True" 
                        PreviewMouseUp="Contact_Select"
                        GotFocus="Got_Focus"
-                       LostFocus="Lost_Focus"/>
+                       LostFocus="Lost_Focus">
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="TextBlock" TextWrapping="Wrap"  Height="83" Width="288" FontSize="50"/>
         </Border>
         <Button Content="Button" HorizontalAlignment="Center" Margin="0,323,0,0" VerticalAlignment="Top" Height="51" Width="106" FontSize="30"/>
     </Grid>
