--- a/mouseFocus/mouseFocus/MainWindow.xaml
+++ b/mouseFocus/mouseFocus/MainWindow.xaml
@@ -11,9 +11,15 @@
                        Focusable="True" 
                        PreviewMouseUp="Contact_Select"
                        GotFocus="Got_Focus"
-                       LostFocus="Lost_Focus">
+                       LostFocus="Lost_Focus" Margin="0,48,0,260">
             <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="TextBlock" TextWrapping="Wrap"  Height="83" Width="288" FontSize="50"/>
         </Border>
-        <Button Content="Button" HorizontalAlignment="Center" Margin="0,323,0,0" VerticalAlignment="Top" Height="51" Width="106" FontSize="30"/>
+        <Border Width="300" Height="100"  BorderBrush="Orange" BorderThickness="5"
+                       Focusable="True" 
+                       PreviewMouseUp="Contact_Select"
+                       GotFocus="Got_Focus"
+                       LostFocus="Lost_Focus" Margin="0,181,0,120">
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="TextBlock" TextWrapping="Wrap"  Height="83" Width="288" FontSize="50"/>
+        </Border>
     </Grid>
 </Window>
